--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </li>
                     </ul>
                     <div class="profile__text">
-                        <p>Frontend-разработчик. Созданием сайтов занимаюсь с 2020 года. Работал на фрилансе и приобрел опыт в разработке сайтов различной сложности.</p>
+                        <p>Frontend-разработчик. Созданием сайтов занимаюсь с 2020 года, имею опыт в разработке сайтов различной сложности.</p>
                     </div>
                 </div>
                 <nav class="nav  nav--mobile">
